--- a/src/react/components/common/common.scss
+++ b/src/react/components/common/common.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: row;
         flex-grow: 1;
+        margin-bottom: 0;
     }
 
     .form-group {
